--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,12 @@
     margin-top: 2%;
     margin-right: 25%;
 }
+
+.centerCourse{
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.subButton{
+    padding-bottom: 40px;
+}
